# UniBM

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  __init__.py  justfile  mkdocs.yml  pyproject.toml  requirements.txt  vignette.ipynb
.github/workflows/: ci.yml  docs.yml
.serena/: project.yml
data/: usgs_2000_2004.csv  usgs_2005_2009.csv  usgs_2010_2014.csv  usgs_2015_2019.csv  usgs_2020_2024.csv
data/metadata/application/: cpi_u_calendar_2025_base.csv  usgs_candidate_sites.json  usgs_frozen_sites.json
docs/: concepts.md  concepts.rst  conf.py  getting-started.md  getting_started.rst  index.md  index.rst  reading-returned-objects.md  reading_returned_objects.rst  worked-examples.md  worked_examples.rst
docs/_static/: ei_workflow.dot  evi_workflow.dot
docs/api/: bootstrap.rst  cdf.md  cdf.rst  core.rst  diagnostics.rst  ei.md  ei.rst  evi.md  evi.rst  external.rst  extremal_index.rst  models.rst  plotting.rst  public-api.md  public_api.rst
docs/javascripts/: mermaid.js
docs/stylesheets/: extra.css
notebooks/: vignette.ipynb  vignette.py
scripts/: config.py  notebook_api.py  rebuild_vignette.py  vignette.ipynb  vignette_cells.py  vignette_sections.py
scripts/application/: __init__.py  build.py  diagnostics.py  fit.py  freeze_usgs.py  inputs.py  metadata.py  outputs.py  screening.py  specs.py
scripts/benchmark/: __init__.py  common.py  design.py  ei_benchmark.py  ei_eval.py  ei_report.py  evi_benchmark.py  evi_external.py  evi_report.py
scripts/data_prep/: __init__.py  fema.py  ghcn.py  usgs.py
scripts/manuscript/: artifact_manifest.py
scripts/notebook_api/: api.py
scripts/shared/: __init__.py  import_bootstrap.py  profile_sliding_windows.py  runtime.py
scripts/unibm/: __init__.py  _validation.py  bootstrap.py  core.py  diagnostics.py  external.py  extremal_index.py  models.py  plotting.py  window_ops.py
scripts/unibm/extremal_index/: _native.py  _paths.py  _shared.py
scripts/vignette/: __init__.py  api.py
scripts/workflows/: __init__.py  application.py  application_fit.py  application_inputs.py  application_metadata.py  application_outputs.py  application_screening.py  application_specs.py  benchmark_common.py  benchmark_design.py  ei_benchmark.py  ei_benchmark_eval.py  ei_report.py  evi_benchmark.py  evi_benchmark_external.py  evi_report.py  freeze_usgs_station_selection.py  import_bootstrap.py  notebook_api.py  profile_sliding_windows.py
src/unibm/: __about__.py  __init__.py  _block_grid.py  _bootstrap_sampling.py  _diagnostic_models.py  _numeric.py  _runtime.py  _window_ops.py  bootstrap.py  cdf.py  core.py  diagnostics.py  external.py  models.py  plotting.py  summaries.py
src/unibm/ei/: __init__.py  _internal.py  _likelihood.py  _stats.py  _validation.py  bm.py  bootstrap.py  models.py  native.py  paths.py  plotting.py  preparation.py  selection.py  threshold.py
src/unibm/evi/: __init__.py  _regression.py  _summaries.py  baselines.py  blocks.py  bootstrap.py  core.py  design.py  estimation.py  external.py  models.py  plotting.py  selection.py  spectrum.py  summaries.py  tail.py  targets.py
src/unibm/extremal_index/: __init__.py  _bootstrap.py  _native.py  _paths.py  _shared.py  _threshold.py
tests/: _path_setup.py  test_application_bundle_smoke.py  test_application_diagnostics.py  test_application_facade.py  test_application_fit.py  test_application_metadata.py  test_application_outputs.py  test_application_screening.py  test_benchmark_cache_contract.py  test_benchmark_common.py  test_benchmark_design_internal.py  test_config_paths.py  test_distribution_artifacts.py  test_ei_benchmark_report.py  test_evi_benchmark_report.py  test_evi_external_benchmark.py  test_extremal_index_allow_zeros.py  test_fema_prep.py  test_ghcn_prep.py  test_import_bootstrap.py  test_justfile.py  test_manuscript_manifest.py  test_manuscript_source.py  test_notebook_api.py  test_rebuild_vignette.py  test_unibm_bootstrap.py  test_unibm_cdf.py  test_unibm_core.py  test_unibm_diagnostics.py  test_unibm_external.py  test_unibm_extremal_index.py  test_unibm_package_smoke.py  test_unibm_package_structure.py  test_unibm_plotting_and_api.py  test_unibm_summaries.py  test_usgs_prep.py  test_vignette_source.py  test_window_ops.py  test_workflow_runtime.py
tests/ei/: test_bm.py  test_bootstrap.py  test_paths.py  test_threshold.py
tests/evi/: test_baselines.py  test_blocks.py  test_bootstrap.py  test_estimation.py  test_families.py  test_selection.py  test_summaries.py
unibm/: __init__.py
unibm/benchmark/: README.md  __init__.py  __main__.py
