[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unibm"
version = "0.0.0"
description = "Block-maxima inference methods for heavy-tailed time series under serial dependence."
requires-python = ">=3.11"
authors = [{ name = "Tuoyuan Cheng", email = "tuoyuan.cheng@nus.edu.sg" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "block maxima",
    "environmental extremes",
    "extreme value theory",
    "extremal index",
    "heavy tails",
    "return levels",
    "serial dependence",
    "sliding blocks",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "matplotlib>=3.8",
    "numpy>=2",
    "pandas>=2",
    "python-dotenv",
    "scipy>=1.13",
]

[project.urls]
Repository = "https://github.com/TY-Cheng/UniBM"

[dependency-groups]
dev = [
    "coverage",
    "ipykernel",
    "missingno",
    "requests",
    "ruff",
    "sphinx>=8",
]

[tool.hatch.build]
exclude = ["/**/__pycache__", "/**/.DS_Store"]

[tool.hatch.build.targets.wheel]
packages = ["scripts/unibm"]

[tool.hatch.build.targets.sdist]
include = [
    "/.env.example",
    "/justfile",
    "/LICENSE",
    "/README.md",
    "/data/metadata/application",
    "/docs",
    "/pyproject.toml",
    "/scripts/config.py",
    "/scripts/data_prep",
    "/scripts/rebuild_vignette.py",
    "/scripts/unibm",
    "/scripts/vignette.ipynb",
    "/scripts/workflows",
    "/tests",
]

[tool.uv]
package = true
managed = true
default-groups = ["dev"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
line-length = 99
extend-exclude = ["justfile"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 99

[tool.ruff.lint.pycodestyle]
max-doc-length = 99
max-line-length = 99

[tool.docformatter]
wrap-summaries = 99
wrap-descriptions = 99
blank-lines-around-summary = true
in-place = true
make-summary-multi-line = true
pre-summary-space = true
recursive = true
skip-ignore = false

[tool.coverage.run]
branch = true
source = ["scripts/unibm"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
fail_under = 90
exclude_also = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
]

[tool.coverage.html]
directory = "htmlcov"
