[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unibm"
dynamic = ["version"]
description = "Block-maxima inference methods for heavy-tailed time series under serial dependence."
requires-python = ">=3.11"
authors = [{ name = "Tuoyuan Cheng", email = "tuoyuan.cheng@nus.edu.sg" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "block maxima",
    "block-maximum quantiles",
    "design-life levels",
    "environmental extremes",
    "extreme value theory",
    "extremal index",
    "heavy tails",
    "serial dependence",
    "sliding blocks",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "matplotlib>=3.8",
    "numpy>=2",
    "pandas>=2",
    "scipy>=1.13",
]

[project.urls]
Homepage = "https://github.com/TY-Cheng/UniBM/"
Repository = "https://github.com/TY-Cheng/UniBM/"
Documentation = "https://ty-cheng.github.io/UniBM/"
Issues = "https://github.com/TY-Cheng/UniBM/issues"
Changelog = "https://github.com/TY-Cheng/UniBM/releases"

[dependency-groups]
dev = [
    "coverage",
    "ipykernel",
    "jupytext",
    "mkdocs>=1.6",
    "mkdocs-autorefs>=1.4",
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.29",
    "nbconvert",
    "pymdown-extensions>=10.14",
    "python-dotenv",
    "ruff",
]

[tool.hatch.build]
exclude = ["/**/__pycache__", "/**/.DS_Store"]

[tool.hatch.version]
path = "src/unibm/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/unibm"]

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
    "/src/unibm",
]

[tool.uv]
package = true
managed = true
default-groups = ["dev"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
line-length = 99
extend-exclude = ["site", "justfile"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 99

[tool.ruff.lint.pycodestyle]
max-doc-length = 99
max-line-length = 99

[tool.docformatter]
wrap-summaries = 99
wrap-descriptions = 99
blank-lines-around-summary = true
in-place = true
make-summary-multi-line = true
pre-summary-space = true
recursive = true
skip-ignore = false

[tool.coverage.run]
branch = true
source = ["src/unibm"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
fail_under = 90
exclude_also = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
]

[tool.coverage.html]
directory = "htmlcov"
